# pado-hologram

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-extra.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  docs.yml
assets/stylesheets/: extra.css
community/contributing/: index.html
community/vision/: index.html
concepts/architecture/: index.html
concepts/core-vs-hologram/: index.html
docs/source/: citation.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  pado_hologram.rst  updates.rst
docs_mkdocs/: architecture.md  contributing.md  getting-started.md  index.md  vision.md
docs_mkdocs/community/: contributing.md  vision.md
docs_mkdocs/concepts/: architecture.md  core-vs-hologram.md
docs_mkdocs/guide/: installation.md  quickstart.md  repository-layout.md
docs_mkdocs/reference/: fork-and-license.md  modules.md
docs_mkdocs/workflows/: device-modeling.md  experiments.md  phase-only-cgh.md
guide/installation/: index.html
pado/: __init__.py  display.py  light.py  math.py  optical_element.py
pado_hologram/: __init__.py  _tensor.py  algorithms.py  cli.py  config.py  experiment.py  hydra_app.py  losses.py  pipeline.py  slm.py  targets.py
requirements/: requirements-docs.txt
search/: search_index.json
tests/: test_display_lcos.py  test_pado_hologram_advanced.py  test_pado_hologram_exact_parity.py  test_pado_hologram_modules.py  test_pado_hologram_phase2.py  test_pado_hologram_scaffold.py  test_stability_core.py
tools/: generate_banner_art.py
(+75 files in other folders)
