[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pado-optics"
version = "1.0.1"
description = "Pytorch Automatic Differentiable Optics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Seung-Hwan Baek", email = "shwbaek@postech.ac.kr" },
    { name = "Dong-Ha Shin", email = "0218sdh@gmail.com"  },
    { name = "Yujin Jeon" },
    { name = "Seung-Woo Yoon" },
    { name = "Eunsue Choi" },
    { name = "Gawoon Ban" },
    { name = "Hyunmo Kang" }
]
requires-python = ">=3.9"
dependencies = [
    "torch>=1.10.0",
    "numpy>=1.16.0",
    "matplotlib>=3.3.0",
    "scipy>=1.0.0",
    "hydra-core>=1.3.0",
]

[project.optional-dependencies]
warp = [
    "warp-lang>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/cinescope-wkr/pado-hologram"
Repository = "https://github.com/cinescope-wkr/pado-hologram.git"
Documentation = "https://cinescope-wkr.github.io/pado-hologram/"

[tool.setuptools.packages.find]
include = ["pado", "pado.*", "pado_hologram", "pado_hologram.*"]

[tool.setuptools.package-data]
pado_hologram = ["conf/*.yaml", "conf/**/*.yaml"]
